--- a/AlmacenMVC/Views/Shared/_Layout.cshtml
+++ b/AlmacenMVC/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                         <ul class="nav navbar-nav">
                             <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
                             <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
-                            <li>@Html.ActionLink("Salir", "Index", "Home")</li>
+                            <li>@Html.ActionLink("Salir", "Salir", "Usuarios")</li>
                         </ul>
                         <div class="navbar-brand">@usuario</div>
                     </div>
