--- a/AlmacenMVC/Views/Usuarios/Index.cshtml
+++ b/AlmacenMVC/Views/Usuarios/Index.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Lista de Usuarios</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Crear Nuevo", "Create")
 </p>
 <table class="table">
     <tr>
@@ -53,9 +53,9 @@
             @Html.DisplayFor(modelItem => item.Id_Rol)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id_User }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id_User }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id_User })
+            @Html.ActionLink("Editar", "Edit", new { id=item.Id_User }) |
+            @Html.ActionLink("Detalles", "Details", new { id=item.Id_User }) |
+            @Html.ActionLink("Eliminar", "Delete", new { id=item.Id_User })
         </td>
     </tr>
 }
