--- a/AlmacenMVC/Views/Home/Registro.cshtml
+++ b/AlmacenMVC/Views/Home/Registro.cshtml
@@ -58,7 +58,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Id_Rol, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Id_Rol, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Id_Rol, new { htmlAttributes = new { @class = "form-control", @Value = "0" } })
                 @Html.ValidationMessageFor(model => model.Id_Rol, "", new { @class = "text-danger" })
             </div>
         </div>
